--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-        <a class="header-logo" href="./index.html"><span class="header-logo-accent">Web</span>Studio</a>
+        <a class="header-logo" href="./index.html"><span class="header-logo-accent">Studio</span>Web</a>
      
 <ul class="header-menu-list">
 <li class="header-menu-item">
-    <a class="header-menu-link" href="">Studio</a>
+    <a class="header-menu-link" href="./index.html">Studio</a>
 </li>
 <li class="header-menu-item">
     <a class="header-menu-link" href="">Portfolio</a>
@@ -131,7 +131,7 @@
 </section>
     </main>
     <footer class="footer">
-        <a class="footer-logo" href="./index.html"><span class="footer-logo-accent">Web</span>Studio</a>
+        <a class="footer-logo" href="./index.html"><span class="footer-logo-accent">Studio</span>Web</a>
 
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
