--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-        <a class="header-logo" href="./index.html"><span class="header-logo-accent">Studio</span>Web</a>
+        <a class="header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
      
 <ul class="header-menu-list">
 <li class="header-menu-item">
@@ -131,7 +131,7 @@
 </section>
     </main>
     <footer class="footer">
-        <a class="footer-logo" href="./index.html"><span class="footer-logo-accent">Studio</span>Web</a>
+        <a class="footer-logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
 
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
